packages/forge-dsl/fixtures/errors/e15-exhaustion.fable
// expect: FORGE305
-> loop

=== loop ===
Around again.
* Pick the apple.
  -> loop
* Pick the pear.
  -> loop
